Fix e2e tests; Make question help icon small too

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -5,11 +5,6 @@
   }
 }
 
-.smaller-icon {
-  width: 0.9rem !important;
-  height: 0.9rem !important;
-}
-
 .btn-scenario-header {
   height: 2.6rem;
   border-radius: 0.375rem; // copying from card
